[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/player/moving/p_ship_2.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Player.gd" type="Script" id=2]
[ext_resource path="res://src/actors/BoostController.gd" type="Script" id=3]
[ext_resource path="res://src/actors/BoostWord1.gd" type="Script" id=4]
[ext_resource path="res://src/actors/NodeDetectArea.gd" type="Script" id=5]
[ext_resource path="res://assets/coin.png" type="Texture" id=6]
[ext_resource path="res://fonts/BoostFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/player/moving/p_ship_1.png" type="Texture" id=8]
[ext_resource path="res://assets/player/moving/p_ship_3.png" type="Texture" id=9]
[ext_resource path="res://assets/player/moving/p_ship_4.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 12.8689

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 152.387

[node name="Player" type="KinematicBody2D"]
position = Vector2( 96.1525, 151.741 )
collision_mask = 10
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.0378413, -0.0378413 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 4 )
animation = "idle"
frame = 3
flip_h = true

[node name="DirectionDot" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Boost_Duration" type="Timer" parent="."]

[node name="BoostController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="PlayerMoveTimer" type="Timer" parent="BoostController"]

[node name="BoostIntervalTimer" type="Timer" parent="BoostController"]

[node name="BoostWord1" type="KinematicBody2D" parent="BoostController"]
position = Vector2( 96.1525, 151.741 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoostController/BoostWord1"]
visible = false
position = Vector2( -0.222809, -0.222824 )
shape = SubResource( 2 )
disabled = true

[node name="Label" type="Label" parent="BoostController/BoostWord1"]
margin_left = -20.0
margin_top = -23.0
margin_right = 20.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.627451, 0.54902, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 7 )

[node name="BoostMissTimer" type="Timer" parent="BoostController/BoostWord1"]

[node name="BoostDurationTimer" type="Timer" parent="BoostController/BoostWord1"]

[node name="BoostWord2" type="KinematicBody2D" parent="BoostController"]
position = Vector2( 96.1525, 151.741 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoostController/BoostWord2"]
visible = false
position = Vector2( -0.222809, -0.222824 )
shape = SubResource( 2 )
disabled = true

[node name="Label" type="Label" parent="BoostController/BoostWord2"]
margin_left = -20.0
margin_top = -23.0
margin_right = 20.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 0.560784, 0.737255, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoostMissTimer" type="Timer" parent="BoostController/BoostWord2"]

[node name="BoostDurationTimer" type="Timer" parent="BoostController/BoostWord2"]

[node name="BoostWord3" type="KinematicBody2D" parent="BoostController"]
position = Vector2( 96.1525, 151.741 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoostController/BoostWord3"]
visible = false
position = Vector2( -0.222809, -0.222824 )
shape = SubResource( 2 )
disabled = true

[node name="Label" type="Label" parent="BoostController/BoostWord3"]
margin_left = -20.0
margin_top = -23.0
margin_right = 23.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.788235, 1, 0.368627, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 7 )

[node name="BoostMissTimer" type="Timer" parent="BoostController/BoostWord3"]

[node name="BoostDurationTimer" type="Timer" parent="BoostController/BoostWord3"]

[node name="Timer" type="Timer" parent="."]

[node name="NodeDetectArea" type="Area2D" parent="."]
visible = false
gravity = 0.0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NodeDetectArea"]
visible = false
shape = SubResource( 3 )
disabled = true

[connection signal="timeout" from="Boost_Duration" to="." method="_on_Boost_Duration_timeout"]
[connection signal="timeout" from="BoostController/PlayerMoveTimer" to="BoostController" method="_on_PlayerMoveTimer_timeout"]
[connection signal="timeout" from="BoostController/BoostIntervalTimer" to="BoostController" method="_on_BoostIntervalTimer_timeout"]
[connection signal="timeout" from="BoostController/BoostWord1/BoostMissTimer" to="BoostController/BoostWord1" method="_on_BoostMissTimer_timeout"]
[connection signal="timeout" from="BoostController/BoostWord1/BoostDurationTimer" to="BoostController/BoostWord1" method="_on_BoostDurationTimer_timeout"]
[connection signal="timeout" from="BoostController/BoostWord2/BoostMissTimer" to="BoostController/BoostWord2" method="_on_BoostMissTimer_timeout"]
[connection signal="timeout" from="BoostController/BoostWord2/BoostDurationTimer" to="BoostController/BoostWord2" method="_on_BoostDurationTimer_timeout"]
[connection signal="timeout" from="BoostController/BoostWord3/BoostMissTimer" to="BoostController/BoostWord3" method="_on_BoostMissTimer_timeout"]
[connection signal="timeout" from="BoostController/BoostWord3/BoostDurationTimer" to="BoostController/BoostWord3" method="_on_BoostDurationTimer_timeout"]
[connection signal="area_entered" from="NodeDetectArea" to="NodeDetectArea" method="_on_NodeDetectArea_area_entered"]
